Part-3-Kong/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-edge-ingress
  namespace: default
  annotations:
    # Explicitly sets the Helm-deployed Kong class as the traffic manager
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: devops-project.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
